--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="icon" href="./src/icons/logo.png" />
+  <!-- favidon  -->
+  <link rel="icon" href="./src/assets/icons/logo.svg" />
+  <!-- font family  -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+  </style>
+  <!-- responsinve  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KYC Form</title>
 </head>
